--- a/Style.css
+++ b/Style.css
@@ -90,17 +90,21 @@ label {
 }
 
 @keyframes goldGlow {
-  0%, 10% {
+  0%, 100% {
     filter: drop-shadow(0 0 1px #ffd700)
-            drop-shadow(0 0 2px #fff8b0);
+            drop-shadow(0 0 1.5px #fff8b0);
   }
-  10% {
+  50% {
     filter: drop-shadow(0 0 2px #ffd700)
             drop-shadow(0 0 3px #fff8b0);
   }
 }
 
 .logo-img {
-max-width: 125px; height: auto;
+  display: block;
+  max-width: 125px;
+  height: auto;
+  margin: 0 auto;
+  padding: 30px 0;
   animation: goldGlow 3s ease-in-out infinite;
 }
