--- a/Style.css
+++ b/Style.css
@@ -90,24 +90,4 @@ label {
 }
 
 .logo-img {
-  display: block;
-  max-width: 125px;
-  height: auto;
-  margin: 0 auto;
-  animation: vibrate 1.5s ease-in-out infinite;
-}
-
-@keyframes vibrate {
-  0%, 100% {
-    transform: translate(0, 0);
-  }
-  25% {
-    transform: translate(0.5px, -0.5px);
-  }
-  50% {
-    transform: translate(-0.5px, 0.5px);
-  }
-  75% {
-    transform: translate(0.3px, -0.3px);
-  }
-}
+max-width: 125px; height: auto;
