--- a/Style.css
+++ b/Style.css
@@ -95,57 +95,58 @@ max-width: 125px; height: auto;
 
 @media (min-width: 1024px) {
   body {
-    font-size: 22px;
-    padding: 100px 80px;
+    font-size: 24px;
+    padding: 100px 100px;
   }
 
   .container {
     max-width: 1200px;
-    padding: 80px 100px;
+    padding: 100px 120px;
   }
 
   .title {
-    font-size: 4.6rem;
+    font-size: 5rem;
     line-height: 1.15;
     text-shadow: 0 0 14px #ff00ff, 0 0 22px #ff00ff;
-    margin-bottom: 24px;
+    margin-bottom: 30px;
   }
 
   .subtitle {
-    font-size: 1.9rem;
-    line-height: 1.9;
-    margin-bottom: 60px;
+    font-size: 2.1rem;
+    line-height: 2.1;
+    margin-bottom: 80px;
   }
 
   .question {
-    margin-bottom: 60px;
+    margin-bottom: 70px;
   }
 
   .question p {
-    font-size: 1.8rem;
-    line-height: 1.6;
-    margin-bottom: 18px;
+    font-size: 2rem;
+    line-height: 1.5;
+    font-weight: 700;
+    margin-bottom: 24px;
   }
 
   label {
-    font-size: 1.5rem;
+    font-size: 1.7rem;
     line-height: 1.8;
-    margin-left: 30px;
-    margin-bottom: 14px;
+    margin-left: 35px;
+    margin-bottom: 18px;
     display: block;
   }
 
   .submit-btn {
-    font-size: 1.6rem;
-    padding: 20px 40px;
-    margin-top: 40px;
+    font-size: 1.7rem;
+    padding: 22px 44px;
+    margin-top: 50px;
   }
 
   .logo-img {
-    max-width: 200px;
+    max-width: 220px;
   }
 
   .border-wrapper {
-    padding: 80px 100px;
+    padding: 100px 120px;
   }
 }
