--- a/premium/desktop.css
+++ b/premium/desktop.css
@@ -1,13 +1,35 @@
 @media (min-width: 1024px) {
-  /* Layout and Base */
   body {
-    padding: 100px;
-    font-size: 22px;
+    padding: 120px;
+    font-size: 24px;
+  }
+
+  .logo {
+    max-width: 180px;
+    margin: 60px auto 40px;
+  }
+
+  h1 {
+    font-size: 5.6rem;
+    text-align: center;
+    margin-bottom: 40px;
+  }
+
+  .slogan {
+    font-size: 2rem;
+    margin-top: 30px;
+    text-align: center;
+  }
+
+  .quote {
+    font-size: 1.6rem;
+    margin-bottom: 60px;
+    text-align: center;
   }
 
   .image-container {
-    max-width: 900px;
-    margin: 0 auto 50px auto;
+    max-width: 1000px;
+    margin: 0 auto 60px auto;
   }
 
   .image-half img {
@@ -15,47 +37,27 @@
     object-fit: cover;
   }
 
-  /* Header Elements */
-  h1 {
-    font-size: 5rem;
-    margin-bottom: 30px;
-    text-align: center;
-  }
-
-  .slogan {
-    font-size: 1.8rem;
-    margin-top: 20px;
-    text-align: center;
-  }
-
-  .quote {
-    font-size: 1.5rem;
-    margin-bottom: 50px;
-    text-align: center;
-  }
-
-  /* Section Headings */
   h2 {
-    font-size: 2.2rem;
-    margin-top: 60px;
+    font-size: 2.6rem;
+    margin-top: 80px;
     color: #e1bf78;
   }
 
-  /* Paragraphs and List Items */
-  p, li {
-    font-size: 1.4rem;
-    line-height: 1.9;
+  p {
+    font-size: 1.6rem;
+    line-height: 2.1;
+    margin-bottom: 28px;
   }
 
-  /* Indented Sub-lists */
-  .sub {
-    font-size: 1.3rem;
-    margin-left: 2.2rem;
-    color: #c7c7c7;
-  }
-
-  /* Lists */
   ul {
-    margin-left: 30px;
+    margin-left: 40px;
+    font-size: 1.5rem;
+    line-height: 2;
+  }
+
+  .sub {
+    font-size: 1.4rem;
+    margin-left: 2.5rem;
+    color: #c7c7c7;
   }
 }
